fix: hide menu scrollbar

--- a/src/index.css
+++ b/src/index.css
@@ -34,4 +34,8 @@
     .text-line-through {
         text-decoration: line-through;
     }
+
+    .hide-scrollbar::-webkit-scrollbar {
+        display: none;
+    }
 }
